login password verification

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -50,11 +50,18 @@
     /* Experimental Options */
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
+    "forceConsistentCasingInFileNames": true,
     // "baseUrl": "./src",
     "paths": {
-      "@/*": [
+      "@app/*": [
         "./src/*"
       ]
-    }
+    },
+  },
+  "ts-node": {
+    // Do not forget to `npm i -D tsconfig-paths`
+    "require": [
+      "tsconfig-paths/register"
+    ]
   }
 }
