--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@types/node": "^20.5.6",
     "nodemon": "^3.0.1",
     "prima": "^0.0.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0"
   },
   "dependencies": {
     "@prisma/client": "^5.2.0",
